--- a/index.html
+++ b/index.html
@@ -32,13 +32,10 @@
 			.thisisme {
 				display: flex;
 				flex-direction: row;
-				/* visibility: hidden; */
-				z-index: -2;
+				visibility: visible;
 			}
 			.thisisme:hover {
-				/* visibility: visible; */
-				z-index: 3;
-
+				visibility: hidden;
 			}
 			.me {
 				font-size: 150px;
@@ -57,16 +54,10 @@
 				-webkit-background-clip: text;
 				color: transparent;
 			}
-			/* .whiteback {
+			.umatachi {
 				display: flex;
-				justify-content: center;
-				align-items: center;
-				position: absolute;
-				height: 100%;
-				width: 100%;
-				z-index: -1;
-				background-color: white;
-			} */
+				flex-direction: row;
+			}
 		</style>
 	</head>
 	<body style="background-color: aqua;">
@@ -89,6 +80,30 @@
 			<span> This is my steam link! :</span>
 			<a href="https://steamcommunity.com/id/jjangdol6936/" class="steam"> Raphtalia </A>
 			<p>Come on! Add me!</p>
+		</div>
+		<div class="umatachi">
+			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
+			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
+			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
+			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
+			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
+			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
+			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
+			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
+			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
+			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
+			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
+			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
+			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
+			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
+			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
+			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
+			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
+			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
+			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
+			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
+			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
+			
 		</div>
 	</body>
 </html>
