--- a/index.html
+++ b/index.html
@@ -61,6 +61,30 @@
 		</style>
 	</head>
 	<body style="background-color: aqua;">
+		<div class="umatachi">
+			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
+			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
+			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
+			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
+			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
+			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
+			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
+			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
+			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
+			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
+			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
+			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
+			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
+			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
+			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
+			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
+			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
+			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
+			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
+			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
+			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
+			
+		</div>
 		
 		<h1 class="greeting">Hello</h1>
 		<h1 class="myname">I am Oh In-Hyeok</h2>
@@ -69,6 +93,31 @@
 			<div class="nijika2">She is Nijika</div>
 		</div>
 		<p class="cute"> She is so cute!!</p>
+
+		<div class="umatachi">
+			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
+			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
+			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
+			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
+			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
+			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
+			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
+			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
+			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
+			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
+			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
+			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
+			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
+			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
+			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
+			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
+			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
+			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
+			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
+			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
+			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
+			
+		</div>
 
 		<div class="thisisme">
 			<!-- <div class="whiteback"></div> -->
