--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
 		<div class="mysteamlink">
 			<span> This is my steam link! :</span>
 			<a href="https://steamcommunity.com/id/jjangdol6936/" class="steam"> Raphtalia </A>
+			<p> My discord is 오인혁#4454! </p>
 			<p>Come on! Add me!</p>
 		</div>
 		<div class="umatachi">
