--- a/index.html
+++ b/index.html
@@ -33,10 +33,12 @@
 				display: flex;
 				flex-direction: row;
 				visibility: visible;
+				/* width: 50%; */
+
 			}
-			.thisisme:hover {
+			/* .thisisme:hover {
 				visibility: hidden;
-			}
+			} */
 			.me {
 				font-size: 150px;
 				background-image: linear-gradient(90deg, red, orange, yellow, green, blue, navy, purple);
@@ -121,7 +123,7 @@
 
 		<div class="thisisme">
 			<!-- <div class="whiteback"></div> -->
-			<img src="https://media.discordapp.net/attachments/877176204703174728/1051853887356797028/Study-with-me_2022-12-11_01-25-47_AdobeExpress_AdobeExpress.gif" alt="no image">
+			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1061981239508221982/092FBA84-5BA0-4175-8979-3A23F7929304.jpg" alt="no image">
 			<div class="me">This is me</div>
 		</div>
 
