--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 			}
 		</style>
 	</head>
-	<body style="background-color: aqua;">
+	<body style="background-color: rgb(2, 133, 255);">
 		<div class="umatachi">
 			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
 			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
