--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
 				/* width: 50%; */
 
 			}
+
+			.thisisme > img{
+				width: 50%;
+			}
 			/* .thisisme:hover {
 				visibility: hidden;
 			} */
