--- a/index.html
+++ b/index.html
@@ -89,16 +89,15 @@
 			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
 			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
 			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
-			
 		</div>
 		
 		<h1 class="greeting">Hello</h1>
 		<h1 class="myname">I am Oh In-Hyeok</h2>
-		<div class="nijika">
-			<img src="https://thumbs.gfycat.com/ThriftyGroundedGermanshepherd-size_restricted.gif" alt="no image">
-			<div class="nijika2">She is Nijika</div>
+		<div class="thisisme">
+			<!-- <div class="whiteback"></div> -->
+			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1062064576427987005/41411F9C-6660-4EB8-877C-1FF47761094D.jpg" alt="no image">
+			<div class="me">This is me</div>
 		</div>
-		<p class="cute"> She is so cute!!</p>
 
 		<div class="umatachi">
 			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
@@ -125,11 +124,12 @@
 			
 		</div>
 
-		<div class="thisisme">
-			<!-- <div class="whiteback"></div> -->
-			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1061981239508221982/092FBA84-5BA0-4175-8979-3A23F7929304.jpg" alt="no image">
-			<div class="me">This is me</div>
+		<div class="nijika">
+			<img src="https://thumbs.gfycat.com/ThriftyGroundedGermanshepherd-size_restricted.gif" alt="no image">
+			<div class="nijika2">She is Nijika</div>
 		</div>
+		<!-- <p class="cute"> She is so cute!!</p> -->
+
 
 		<div class="mysteamlink">
 			<span> This is my steam link! :</span>
