--- a/index.html
+++ b/index.html
@@ -1,165 +1,29 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<title>OhInHyeok</title>
-		<style>
-			.greeting {
-				color: rgb(255, 251, 0);
-				background-color: rgb(0, 0, 0);
-			}
-			.myname {
-				background-color: black;
-				color: yellow;
-			}
-			.cute {
-				font-size: 50px;
-				background-image: linear-gradient(90deg, red, orange, yellow, green, blue, navy, purple);
-				-webkit-background-clip: text;
-				color: transparent;
-			}
-			.nijika {
-				display: flex;
-				flex-direction: row;
-			}
-			.nijika2 {
-				font-size: 150px;
-				/* background-color: yellow;
-				color: green; */
-				background-image: linear-gradient(90deg, red, orange, yellow, green, blue, navy, purple);
-				-webkit-background-clip: text;
-				color: transparent;
-			}
-			.thisisme {
-				display: flex;
-				flex-direction: row;
-				visibility: visible;
-				/* width: 50%; */
-
-			}
-
-			.thisisme > img{
-				width: 50%;
-			}
-			/* .thisisme:hover {
-				visibility: hidden;
-			} */
-			.me {
-				font-size: 150px;
-				background-image: linear-gradient(90deg, red, orange, yellow, green, blue, navy, purple);
-				-webkit-background-clip: text;
-				color: transparent;
-			}
-			.mysteamlink {
-				font-size: 50px;
-				background-image: linear-gradient(90deg, red, orange, yellow, green, blue, navy, purple);
-				-webkit-background-clip: text;
-				color: transparent;
-			}
-			.steam:hover {
-				background-image: linear-gradient(90deg, red, orange, yellow, green, blue, navy, purple);
-				-webkit-background-clip: text;
-				color: transparent;
-			}
-			.umatachi {
-				display: flex;
-				flex-direction: row;
-			}
-		</style>
-	</head>
-	<body style="background-color: rgb(2, 133, 255);">
-		<div class="umatachi">
-			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
-			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
-			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
-			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
-			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
-			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
-			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
-			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
-			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
-			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
-			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
-			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
-			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
-			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
-			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
-			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
-			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
-			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
-			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
-			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
-			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
-		</div>
-		
-		<h1 class="greeting">Hello</h1>
-		<h1 class="myname">I am Oh In-Hyeok</h2>
-		<div class="thisisme">
-			<!-- <div class="whiteback"></div> -->
-			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1062064576427987005/41411F9C-6660-4EB8-877C-1FF47761094D.jpg" alt="no image">
-			<div class="me">This is me</div>
-		</div>
-
-		<div class="umatachi">
-			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
-			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
-			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
-			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
-			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
-			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
-			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
-			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
-			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
-			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
-			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
-			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
-			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
-			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
-			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
-			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
-			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
-			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
-			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
-			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
-			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
-			
-		</div>
-
-		<div class="nijika">
-			<img src="https://thumbs.gfycat.com/ThriftyGroundedGermanshepherd-size_restricted.gif" alt="no image">
-			<div class="nijika2">She is Nijika</div>
-		</div>
-		<!-- <p class="cute"> She is so cute!!</p> -->
-
-
-		<div class="mysteamlink">
-			<span> This is my steam link! :</span>
-			<a href="https://steamcommunity.com/id/jjangdol6936/" class="steam"> Raphtalia </A>
-			<p> My discord is 오인혁#4454! </p>
-			<p>Come on! Add me!</p>
-		</div>
-		<div class="umatachi">
-			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
-			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
-			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
-			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
-			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
-			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
-			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
-			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
-			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
-			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
-			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
-			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
-			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
-			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
-			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
-			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
-			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
-			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
-			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
-			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
-			<img src="https://cdn.discordapp.com/attachments/969202402190307399/1060191151665193011/3.gif" alt="My Image">
-			
-		</div>
-	</body>
+<html lang="ko">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hello World!</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+</head>
+<body class="bg-[#b6cbe5] flex justify-center items-center h-screen m-0">
+    <div class="bg-gray-200 p-8 rounded-lg shadow-lg flex flex-col items-center">
+        <img src="sources/profile_pic/temp_prof.jpg" alt="프로필 사진" class="w-36 h-36 rounded-full object-cover mb-5">
+        <h1 class="text-2xl font-bold mb-2">Inhyeok Oh</h1>
+        <p class="text-lg text-gray-700 mb-4">DGIST, Junior</p>
+        <p class="text-lg font-semibold mb-2">CV</p>
+        <ul class="text-left list-none">
+            <li class="mb-1">• Movers Inc. Office team</li>
+            <li class="mb-1">• 2023 UCLA Summer Session</li>
+            <li class="mb-1">• 前 VodkaGames headquater</li>
+        </ul>
+        <div class="mt-6">
+            <a href="https://github.com/InhyeokOh03" class="block text-blue-500 hover:underline mb-2">GitHub</a>
+            <a href="https://steamcommunity.com/id/jjangdol6936/" class="block text-blue-500 hover:underline mb-2">Steam</a>
+            <a href="https://www.linkedin.com/in/inhyeok-oh-694a26252/" class="block text-blue-500 hover:underline mb-2">LinkedIn</a>
+            <a href="https://www.instagram.com/jjangdol__/" class="block text-blue-500 hover:underline mb-2">Instagram</a>
+        </div>
+        <p class="mt-4 text-gray-700">DISCORD: raphtalia__</p>
+    </div>
+</body>
 </html>
