--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <ul class="text-left list-none">
             <li class="mb-1">• Movers Inc. Office team</li>
             <li class="mb-1">• 2023 UCLA Summer Session</li>
-            <li class="mb-1">• 前 VodkaGames headquater</li>
+            <li class="mb-1">• 前 VodkaGames headquarter</li>
         </ul>
         <div class="mt-6">
             <a href="https://github.com/InhyeokOh03" class="block text-blue-500 hover:underline mb-2">GitHub</a>
